[metadata]
name = pylint_in_vagrant
author = Troy J. Farrell
author_email = troy@entheossoft.com
license_files =
    LICENSE
version = 0.0.4

[mypy]
python_version = 3.9

[options]
packages = find:
python_requires = ~=3.5

[options.entry_points]
console_scripts =
    pylint-in-vagrant = pylint_in_vagrant:main
